--- a/index.html
+++ b/index.html
@@ -85,8 +85,14 @@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var scannerContainer = document.getElementById('scanner-container');
+            var qrBoxSize = Math.min(300, window.innerWidth * 0.6); // max 300px or 60% of screen width
             var qrReader = new Html5QrcodeScanner(
-                "qr-reader", { fps: 10, qrbox: 250, showTorchButtonIfSupported: true });
+                "qr-reader", {
+                fps: 10,
+                qrbox: qrBoxSize,
+                showTorchButtonIfSupported: true
+            });
+
 
             qrReader.render(onScanSuccess);
             var copyButton = document.getElementById('copy-button');
