--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -85,14 +86,8 @@
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var scannerContainer = document.getElementById('scanner-container');
-            var qrBoxSize = Math.min(300, window.innerWidth * 0.6); // max 300px or 60% of screen width
             var qrReader = new Html5QrcodeScanner(
-                "qr-reader", {
-                fps: 10,
-                qrbox: qrBoxSize,
-                showTorchButtonIfSupported: true
-            });
-
+                "qr-reader", { fps: 10, qrbox: 250, showTorchButtonIfSupported: true });
 
             qrReader.render(onScanSuccess);
             var copyButton = document.getElementById('copy-button');
