--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Scanner</title>
     <style>
+        html {
+            max-width: 700px;
+        }
+
         body {
             background-color: #111;
             color: #fff;
